--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="slider" id="slider">
         <div class="holder">
             <div class="slide-wrapper navigation">
-                <div class="slide"><div class="slide-image red"></div></div>
+                <div class="slide-image red"></div>
             </div>
             <div class="slide-wrapper">
-                <div class="slide"><div class="slide-image green"></div></div>
+                <div class="slide-image green"></div>
             </div>
         </div>
     </div>
